# shape-fitting

./: CMakeLists.txt  README.md  pyproject.toml  test_fitting.py
conda.recipe/: meta.yaml
cy_fit_hough/: CMakeLists.txt  README.md
cy_fit_hough/include/: gaussian_sphere.h  spherical_grid.h
cy_fit_hough/src/: cylinder_fitting.cpp  main.cpp
cy_fit_hough/tests/: test_basic.py
docs/: python_example.rst
include/: spherical_grid.h
scripts/: generate_cylinder_clouds.sh  generate_cylinder_clouds_noise.sh  generate_cylinder_clouds_occul.sh
scripts/sample/: cylinder.pcd
src/: cylinder_fitting_hough.cpp
src/cy_fit_hough/: __init__.py
test/: cylinder_fitting_test.cpp  cylinder_generation.cpp  cylinder_generation_occlusion.cpp  cylinder_performance_plots.py  cylinder_single.cpp  cylinder_single_Figueiredo.cpp  cylinder_single_rabani.cpp
